--- a/index.html
+++ b/index.html
@@ -11,35 +11,41 @@
 </head>
 
 <body>
-    <section class="meun container">
+    <section class="meun ">
         <h1>our meun</h1>
-        <div class="row meun-card d-flex justify-content-center">
-            <div class="col-lg-4   col-md-6 card  ">
+        <div class=" meun-card ">
+            <div class=" card one ">
                 <div class="card-body">
                     <div id="meun1" class="name">Chinken</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti aliquid tempore
-                    distinctio
-                    impedit dolores unde id dicta! Vero facere iure ipsum praesentium ut dolor temporibus quod, nulla
-                    rem
-                    nam!</p> </div>
+                        distinctio
+                        impedit dolores unde id dicta! Vero facere iure ipsum praesentium ut dolor temporibus quod,
+                        nulla
+                        rem
+                        nam!</p>
+                </div>
             </div>
-            <div class="col-lg-4   col-md-6    card  ">
+            <div class="   card two ">
                 <div class="card-body">
                     <div id="meun2" class="name">Beef</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti aliquid tempore
-                    distinctio
-                    impedit dolores unde id dicta! Vero facere iure ipsum praesentium ut dolor temporibus quod, nulla
-                    rem
-                    nam!</p> </div>
+                        distinctio
+                        impedit dolores unde id dicta! Vero facere iure ipsum praesentium ut dolor temporibus quod,
+                        nulla
+                        rem
+                        nam!</p>
+                </div>
             </div>
-            <div class="col-lg-4   col-md-12   card  ">
+            <div class="  card three  ">
                 <div class="card-body">
                     <div id="meun3" class="name ">Sushi</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti aliquid tempore
-                    distinctio
-                    impedit dolores unde id dicta! Vero facere iure ipsum praesentium ut dolor temporibus quod, nulla
-                    rem
-                    nam!</p> </div>
+                        distinctio
+                        impedit dolores unde id dicta! Vero facere iure ipsum praesentium ut dolor temporibus quod,
+                        nulla
+                        rem
+                        nam!</p>
+                </div>
             </div>
 
         </div>
